--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,24 +1,26 @@
-<!-- src/main/resources/templates/login.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="/css/profile.css">
 </head>
 <body>
-<h1>Login</h1>
-<form method="post" action="/login">
-    <div>
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username">
-    </div>
-    <div>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password">
-    </div>
-    <div>
+<div class="login-container">
+    <h1>Login</h1>
+    <form method="post" action="/login">
+        <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+        <div>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username">
+        </div>
+        <div>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password">
+        </div>
         <button type="submit">Login</button>
-    </div>
-</form>
+    </form>
+</div>
 </body>
 </html>
