update signup page

--- a/src/main/resources/templates/static/signup.html
+++ b/src/main/resources/templates/static/signup.html
@@ -8,7 +8,7 @@
 <body>
 <div class="signup-container">
     <h2>Signup</h2>
-    <form id="signup-form" method="post">
+    <form id="signup-form" action="/api/user/signup" method="post">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
         <label for="password">Password:</label>
