--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -3,19 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Signup</title>
-    <link rel="stylesheet" type="text/css" href="/css/signup.css">
+    <link rel="stylesheet" href="/css/signup.css">
 </head>
 <body>
-<div class="signup-container">
-    <h2>Signup</h2>
-    <form id="signup-form" action="/api/user/signup" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <button type="submit">Signup</button>
-    </form>
-</div>
+<h1>Signup</h1>
+<form id="signupForm">
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="username"><br>
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password"><br>
+    <button type="submit">Sign Up</button>
+</form>
 <script src="/js/signup.js"></script>
 </body>
 </html>
