--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/css/profile.css">
+    <link rel="stylesheet" href="/css/profile.css"/>
 </head>
 <body>
 <div class="login-container">
     <h1>Login</h1>
     <form method="post" action="/login">
-        <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+        <input type="hidden" name="_csrf" value="${_csrf.token}"/>
         <div>
             <label for="username">Username:</label>
             <input type="text" id="username" name="username">
