--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -2,18 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
-    <link rel="stylesheet" href="/css/signup.css">
+    <link rel="stylesheet" href="/css/profile.css"/>
 </head>
 <body>
-<h1>Signup</h1>
-<form id="signupForm">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username"><br>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password"><br>
-    <button type="submit">Sign Up</button>
-</form>
-<script src="/js/signup.js"></script>
+<div class="signup-container">
+    <h1>Signup</h1>
+    <form method="post" action="/signup">
+        <input type="hidden" name="_csrf" value="${_csrf.token}"/>
+        <div>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username">
+        </div>
+        <div>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password">
+        </div>
+        <button type="submit">Signup</button>
+    </form>
+</div>
 </body>
 </html>
